fix: Carousel spacing

--- a/packages/ui/src/components/molecules/Carousel/styles.scss
+++ b/packages/ui/src/components/molecules/Carousel/styles.scss
@@ -4,8 +4,8 @@
   // --------------------------------------------------------
 
   // Track
-  --fs-carousel-padding-mobile             : 0 var(--fs-grid-padding);
-  --fs-carousel-padding-desktop            : 0 calc((100% - var(--fs-grid-max-width))/2) var(--fs-spacing-0);
+  --fs-carousel-padding-mobile             : var(--fs-spacing-0) var(--fs-grid-padding);
+  --fs-carousel-padding-desktop            : var(--fs-spacing-0) calc((100% - var(--fs-grid-max-width))/2) var(--fs-spacing-0);
 
   // Item
   --fs-carousel-item-width-mobile          : 60%;
